--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,22 @@
     "editor.codeActionsOnSave": {
         "source.organizeImports": true
     },
+    "[plaintext]": {
+        "editor.formatOnSave": false,
+        "files.trimTrailingWhitespace": false,
+        "files.trimFinalNewlines": false,
+        "files.insertFinalNewline": false
+    },
+    "[input]": {
+        "editor.formatOnSave": false,
+        "files.trimTrailingWhitespace": false,
+        "files.trimFinalNewlines": false,
+        "files.insertFinalNewline": false
+    },
+    "files.associations": {
+        "**.in": "input",
+        "**.input": "input",
+    },
     "files.trimTrailingWhitespace": true,
     "files.trimFinalNewlines": true,
     "files.insertFinalNewline": true,
@@ -11,6 +27,10 @@
     "python.linting.flake8Enabled": true,
     "python.linting.flake8Args": [
         "--extend-ignore=F401,D,E501,E203,F841,F405"
+    ],
+    "isort.args": [
+        "--line-length 120",
+        "--profile black"
     ],
     "cSpell.words": [
         "aocd",
