--- a/2023/pyproject.toml
+++ b/2023/pyproject.toml
@@ -1,22 +1,9 @@
-[build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
-
-[project]
-name = "aoc"
-authors = [{ name = "Kyle Benesch", email = "4b796c65+github@gmail.com" }]
-dynamic = ["version", "description"]
-classifiers = ["License :: OSI Approved :: The Unlicense (Unlicense)"]
-requires-python = ">=3.12"
-
-[project.urls]
-Home = "https://github.com/HexDecimal/advent-of-code"
-
 [tool.mypy]
 python_version = "3.12"
 
 [tool.ruff]
-exclude = ["."]
+exclude = ["template.py"]
+target-version = "py312"
 # https://docs.astral.sh/ruff/rules/
 select = [
     "E",   # pycodestyle
