--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-        "source.organizeImports": true
+        "source.fixAll": true,
     },
     "[plaintext]": {
         "editor.formatOnSave": false,
@@ -15,6 +15,10 @@
         "files.trimFinalNewlines": false,
         "files.insertFinalNewline": false
     },
+    "[python]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "charliermarsh.ruff"
+    },
     "files.associations": {
         "**.in": "input",
         "**.input": "input",
@@ -22,12 +26,6 @@
     "files.trimTrailingWhitespace": true,
     "files.trimFinalNewlines": true,
     "files.insertFinalNewline": true,
-    "python.formatting.provider": "black",
-    "python.linting.mypyEnabled": true,
-    "python.linting.flake8Enabled": true,
-    "python.linting.flake8Args": [
-        "--extend-ignore=F401,D,E501,E203,F841,F405"
-    ],
     "isort.args": [
         "--line-length 120",
         "--profile black"
@@ -37,6 +35,7 @@
         "argwhere",
         "asarray",
         "astype",
+        "autoupdate",
         "dtype",
         "fillvalue",
         "iinfo",
