--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,8 +36,10 @@
         "asarray",
         "astype",
         "autoupdate",
+        "cattrs",
         "dtype",
         "fillvalue",
+        "frozendict",
         "iinfo",
         "ndenumerate",
         "ndimage",
