--- a/2023/pyproject.toml
+++ b/2023/pyproject.toml
@@ -2,8 +2,10 @@
 python_version = "3.12"
 
 [tool.ruff]
+line-length = 120
 target-version = "py312"
-# https://docs.astral.sh/ruff/rules/
+
+[tool.ruff.lint] # https://docs.astral.sh/ruff/rules/
 select = [
     "E",   # pycodestyle
     "W",   # pycodestyle
@@ -29,10 +31,10 @@ unfixable = ["F401"]
 ignore = [
     "E501",    # line-too-long
     "S101",    # assert
-    "ANN101",  # missing-type-self
-    "ANN102",  # missing-type-cls
     "F405",    # undefined-local-with-import-star-usage
     "PLR2004", # magic-value-comparison
     "PLR0915", # too-many-statements
 ]
-line-length = 120
+
+[tool.ruff.lint.per-file-ignores]
+"template/template.py" = ["B007", "F401"]
