--- a/aoc/pyproject.toml
+++ b/aoc/pyproject.toml
@@ -1,49 +1,34 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
+requires=["flit_core >=3.2,<4"]
+build-backend="flit_core.buildapi"
 
 [project]
-name = "aoc"
-authors = [{ name = "Kyle Benesch", email = "4b796c65+github@gmail.com" }]
-dynamic = ["version", "description"]
-classifiers = ["License :: OSI Approved :: The Unlicense (Unlicense)"]
-requires-python = ">=3.12"
-dependencies = ["numpy"]
+name="aoc"
+authors=[{ name="Kyle Benesch", email="4b796c65+github@gmail.com" }]
+dynamic=["version", "description"]
+classifiers=["License :: OSI Approved :: The Unlicense (Unlicense)"]
+requires-python=">=3.14"
+dependencies=["numpy"]
 
 [project.urls]
-Home = "https://github.com/HexDecimal/advent-of-code"
-
-[tool.mypy]
-python_version = "3.12"
+Home="https://github.com/HexDecimal/advent-of-code"
 
 [tool.ruff]
-# https://docs.astral.sh/ruff/rules/
-select = [
-    "E",   # pycodestyle
-    "W",   # pycodestyle
-    "F",   # Pyflakes
-    "I",   # isort
-    "UP",  # pyupgrade
-    "YTT", # flake8-2020
-    "ANN", # flake8-annotations
-    "B",   # flake8-bugbear
-    "C4",  # flake8-comprehensions
-    "FA",  # flake8-future-annotations
-    "RET", # flake8-return
-    "ICN", # flake8-import-conventions
-    "PIE", # flake8-pie
-    "PT",  # flake8-pytest-style
-    "SIM", # flake8-simplify
-    "PTH", # flake8-use-pathlib
-    "PL",  # Pylint
-    "RUF", # NumPy-specific rules
-    "G",   # flake8-logging-format
+line-length=120
+
+[tool.ruff.lint] # https://docs.astral.sh/ruff/rules/
+select=[
+    "ALL", # flake8-logging-format
 ]
-ignore = [
-    "E501",   # line-too-long
-    "S101",   # assert
-    "ANN101", # missing-type-self
-    "ANN102", # missing-type-cls
-    "F405",   # undefined-local-with-import-star-usage
+ignore=[
+    "EM", # flake8-errmsg
+    "COM", # flake8-commas
+    "D", # pydocstyle
+    "E501", # line-too-long
+    "F405", # undefined-local-with-import-star-usage
+    "S101", # assert
+    "TC001", # typing-only-first-party-import
+    "TC002", # typing-only-third-party-import
+    "TC003", # typing-only-standard-library-import
+    "TRY", # tryceratops
 ]
-line-length = 120
